feat(adoption-insights): bootstrap workspace and add adoption insights analytics module  (#445)
* feat(adoption-insights): bootstrap adoption insights workspace and plugins

Signed-off-by: Rohit Rai <rohitkrai03@gmail.com>

* feat(adoption-insights): add backstage app to the workspace

Signed-off-by: Rohit Rai <rohitkrai03@gmail.com>

* feat(adoption-insights): analytics module for adoption insights plugin

Signed-off-by: Rohit Rai <rohitkrai03@gmail.com>

* feat(adoption-insights): added debug config option

Signed-off-by: Rohit Rai <rohitkrai03@gmail.com>

---------

Signed-off-by: Rohit Rai <rohitkrai03@gmail.com>

--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -6,6 +6,7 @@
 
 *                                                   @bethgriggs @nickboldt @kim-tsao @04kash @coreydaley
 
+/workspaces/adoption-insights                       @rohitkrai03 @karthikjeeyar 
 /workspaces/bulk-import                             @christoph-jerolimov @debsmita1 @rm3l
 /workspaces/global-floating-action-button           @christoph-jerolimov @ciiay @debsmita1 @divyanshiGupta @gashcrumb @its-mitesh-kumar
 /workspaces/global-header                           @christoph-jerolimov @ciiay @debsmita1 @divyanshiGupta @gashcrumb @its-mitesh-kumar
