feat(marketplace): multiple UI fixes and changeset to release 0.1.0 (#456)
* fix(marketplace): fix and simplify spec.categories and spec.authors.name filters/links

Signed-off-by: Christoph Jerolimov <jerolimov+git@redhat.com>

* fix(marketplace): add support type filter

Signed-off-by: Christoph Jerolimov <jerolimov+git@redhat.com>

* fix(marketplace): fix badges

Signed-off-by: Christoph Jerolimov <jerolimov+git@redhat.com>

* fix(marketplace): show links and package versions in plugin content

Signed-off-by: Christoph Jerolimov <jerolimov+git@redhat.com>

* feat(marketplace): add changeset

Signed-off-by: Christoph Jerolimov <jerolimov+git@redhat.com>

---------

Signed-off-by: Christoph Jerolimov <jerolimov+git@redhat.com>

--- a/workspaces/marketplace/examples/collections/featured.yaml
+++ b/workspaces/marketplace/examples/collections/featured.yaml
@@ -2,7 +2,7 @@
 apiVersion: marketplace.backstage.io/v1alpha1
 kind: PluginCollection
 metadata:
-  name: featured
+  name: disabled-featured
   title: Featured Plugins
   description: A set of great plugins! :)
 spec:
