fix(marketplace): fix dynamic plugin build issues (#459)
* fix(marketplace): remove unused knex and zod dependency from common package

Signed-off-by: Christoph Jerolimov <jerolimov+git@redhat.com>

* fix(marketplace): fix imports to type imports

Signed-off-by: Christoph Jerolimov <jerolimov+git@redhat.com>

* fix(marketplace): include namespace in react key

Signed-off-by: Christoph Jerolimov <jerolimov+git@redhat.com>

* fix(marketplace): add missing packages in dynamic plugin example

Signed-off-by: Christoph Jerolimov <jerolimov+git@redhat.com>

* fix(marketplace): move peer dependencies to dependencies

Signed-off-by: Christoph Jerolimov <jerolimov+git@redhat.com>

---------

Signed-off-by: Christoph Jerolimov <jerolimov+git@redhat.com>

--- a/workspaces/marketplace/app-config.dynamic.yaml
+++ b/workspaces/marketplace/app-config.dynamic.yaml
@@ -10,6 +10,10 @@ catalog:
       rules:
         - allow: [Plugin]
     - type: url
+      target: https://github.com/redhat-developer/rhdh-plugins/blob/main/workspaces/marketplace/examples/all-packages.yaml
+      rules:
+        - allow: [Package]
+    - type: url
       target: https://github.com/redhat-developer/rhdh-plugins/blob/main/workspaces/marketplace/examples/all-collections.yaml
       rules:
         - allow: [PluginCollection]
