--- a/workspaces/marketplace/plugins/marketplace/app-config.dynamic.yaml
+++ b/workspaces/marketplace/plugins/marketplace/app-config.dynamic.yaml
@@ -5,11 +5,11 @@ dynamicPlugins:
         - name: marketplace
           importName: MarketplaceIcon
       dynamicRoutes:
-        - path: /marketplace
-          importName: MarketplacePage
-          menuItem:
-            icon: marketplace
-            text: Marketplace
+        - path: /plugins/marketplace
+          importName: DynamicMarketplacePluginRouter
       mountPoints:
-        - mountPoint: admin.page.plugins/cards
-          importName: MarketplaceCatalogContent
+        - mountPoint: internal.plugins/tab
+          importName: DynamicMarketplacePluginContent
+          config:
+            path: marketplace
+            title: Marketplace
