--- a/workspaces/global-floating-action-button/packages/app/package.json
+++ b/workspaces/global-floating-action-button/packages/app/package.json
@@ -52,7 +52,7 @@
     "react-router-dom": "^6.3.0"
   },
   "devDependencies": {
-    "@playwright/test": "^1.32.3",
+    "@playwright/test": "1.50.1",
     "@testing-library/jest-dom": "^6.0.0",
     "@testing-library/react": "^14.0.0",
     "@types/react-dom": "*"
