--- a/workspaces/lightspeed/package.json
+++ b/workspaces/lightspeed/package.json
@@ -45,6 +45,7 @@
     "@backstage/repo-tools": "^0.12.1",
     "@changesets/cli": "^2.27.1",
     "@ianvs/prettier-plugin-sort-imports": "^4.4.0",
+    "@playwright/test": "1.50.1",
     "@spotify/prettier-config": "^12.0.0",
     "knip": "^5.27.4",
     "node-gyp": "^9.0.0",
