--- a/workspaces/theme/package.json
+++ b/workspaces/theme/package.json
@@ -43,7 +43,7 @@
     "@backstage/e2e-test-utils": "^0.1.1",
     "@backstage/repo-tools": "^0.12.1",
     "@changesets/cli": "^2.27.1",
-    "@playwright/test": "^1.32.3",
+    "@playwright/test": "1.50.1",
     "@spotify/prettier-config": "^12.0.0",
     "node-gyp": "^9.0.0",
     "prettier": "^3.4.2",
