fix(marketplace): apply default sorting to filtered plugins api call (#467)
* fix(marketplace): apply default sorting to filtered plugins api call

Signed-off-by: Christoph Jerolimov <jerolimov+git@redhat.com>

* fix(marketplace): fix playwright e2e-test

Signed-off-by: Christoph Jerolimov <jerolimov+git@redhat.com>

---------

Signed-off-by: Christoph Jerolimov <jerolimov+git@redhat.com>

--- a/workspaces/marketplace/app-config.yaml
+++ b/workspaces/marketplace/app-config.yaml
@@ -1,9 +1,9 @@
 app:
-  title: Backstage
+  title: Backstage App
   baseUrl: http://localhost:3000
 
-#organization:
-#  name: My Company
+organization:
+  name: My Company
 
 backend:
   # Used for enabling authentication, secret is shared by all backend plugins
