fix(marketplace): rename to extensions/catalog (#472)
Signed-off-by: Christoph Jerolimov <jerolimov+git@redhat.com>
Co-authored-by: Christoph Jerolimov <139310+christoph-jerolimov@users.noreply.github.com>

--- a/workspaces/marketplace/plugins/marketplace/app-config.dynamic.yaml
+++ b/workspaces/marketplace/plugins/marketplace/app-config.dynamic.yaml
@@ -5,11 +5,11 @@ dynamicPlugins:
         - name: marketplace
           importName: MarketplaceIcon
       dynamicRoutes:
-        - path: /plugins/marketplace
+        - path: /extensions/catalog
           importName: DynamicMarketplacePluginRouter
       mountPoints:
         - mountPoint: internal.plugins/tab
           importName: DynamicMarketplacePluginContent
           config:
-            path: marketplace
-            title: Marketplace
+            path: catalog
+            title: Catalog
