feat(marketplace): rename apiVersion and annotations to extensions.backstage.io (#477)
Signed-off-by: Christoph Jerolimov <jerolimov+git@redhat.com>

--- a/workspaces/marketplace/examples/packages/tekton.yaml
+++ b/workspaces/marketplace/examples/packages/tekton.yaml
@@ -1,6 +1,6 @@
 # yaml-language-server: $schema=../../json-schema/packages.json
 kind: Package
-apiVersion: marketplace.backstage.io/v1alpha1
+apiVersion: extensions.backstage.io/v1alpha1
 metadata:
   name: backstage-community-plugin-tekton
   title: '@backstage-community/plugin-tekton'
