--- a/workspaces/marketplace/examples/collections/featured.yaml
+++ b/workspaces/marketplace/examples/collections/featured.yaml
@@ -1,5 +1,5 @@
 # yaml-language-server: $schema=../../json-schema/collections.json
-apiVersion: marketplace.backstage.io/v1alpha1
+apiVersion: extensions.backstage.io/v1alpha1
 kind: PluginCollection
 metadata:
   name: disabled-featured
