--- a/workspaces/marketplace/examples/plugins/3scale.yaml
+++ b/workspaces/marketplace/examples/plugins/3scale.yaml
@@ -1,5 +1,5 @@
 # yaml-language-server: $schema=../../json-schema/plugins.json
-apiVersion: marketplace.backstage.io/v1alpha1
+apiVersion: extensions.backstage.io/v1alpha1
 kind: Plugin
 metadata:
   name: 3scale
@@ -9,8 +9,8 @@ metadata:
     - 3scale
     - api
   annotations:
-    marketplace.backstage.io/certified-by: Red Hat
-    marketplace.backstage.io/verified-by: Red Hat
+    extensions.backstage.io/certified-by: Red Hat
+    extensions.backstage.io/verified-by: Red Hat
 spec:
   icon: https://janus-idp.io/images/plugins/3scale.svg
   author: Red Hat
