--- a/workspaces/marketplace/examples/plugins/marketplace.yaml
+++ b/workspaces/marketplace/examples/plugins/marketplace.yaml
@@ -1,5 +1,5 @@
 # yaml-language-server: $schema=../../json-schema/plugins.json
-apiVersion: marketplace.backstage.io/v1alpha1
+apiVersion: extensions.backstage.io/v1alpha1
 kind: Plugin
 metadata:
   name: marketplace
@@ -9,7 +9,7 @@ metadata:
     - marketplace
     - catalog
   annotations:
-    marketplace.backstage.io/pre-installed: 'true'
+    extensions.backstage.io/pre-installed: 'true'
 spec:
   author: Backstage Community
   categories:
