--- a/workspaces/marketplace/examples/plugins/quay.yaml
+++ b/workspaces/marketplace/examples/plugins/quay.yaml
@@ -1,5 +1,5 @@
 # yaml-language-server: $schema=../../json-schema/plugins.json
-apiVersion: marketplace.backstage.io/v1alpha1
+apiVersion: extensions.backstage.io/v1alpha1
 kind: Plugin
 metadata:
   name: quay
