--- a/workspaces/marketplace/examples/plugins/search.yaml
+++ b/workspaces/marketplace/examples/plugins/search.yaml
@@ -1,13 +1,13 @@
 # yaml-language-server: $schema=../../json-schema/plugins.json
-apiVersion: marketplace.backstage.io/v1alpha1
+apiVersion: extensions.backstage.io/v1alpha1
 kind: Plugin
 metadata:
   name: search
   title: Backstage Search
   description: Backstage Search lets you find the right information you are looking for in the Backstage ecosystem.
   annotations:
-    marketplace.backstage.io/pre-installed: 'true'
-    marketplace.backstage.io/support-type: Core plugin
+    extensions.backstage.io/pre-installed: 'true'
+    extensions.backstage.io/support-type: Core plugin
 spec:
   icon: https://janus-idp.io/images/plugins/3scale.svg
   authors:
