feat(adoption-Insights): Add adoption Insights events API endpoints (#468)
* add insights api endpoints to save and query metrics

* add unit tests

* add documentation for events api

* fix sonarcloud issues

* modify api response and add more unit tests

* add more unit tests

* add last used timestamp for top_plugins and top_templates

--- a/workspaces/adoption-insights/app-config.yaml
+++ b/workspaces/adoption-insights/app-config.yaml
@@ -6,6 +6,7 @@ app:
       maxBufferSize: 20
       flushInterval: 5000
       debug: true
+      licensedUsers: 100
 
 organization:
   name: My Company
