--- a/workspaces/marketplace/plugins/catalog-backend-module-marketplace/package.json
+++ b/workspaces/marketplace/plugins/catalog-backend-module-marketplace/package.json
@@ -39,11 +39,15 @@
     "@backstage/plugin-catalog-node": "^1.15.1",
     "@backstage/types": "^1.2.1",
     "@red-hat-developer-hub/backstage-plugin-marketplace-common": "workspace:^",
+    "find-root": "^1.1.0",
+    "glob": "^8.1.0",
+    "js-yaml": "^4.1.0",
     "semver": "^7.6.3"
   },
   "devDependencies": {
     "@backstage/backend-test-utils": "^1.2.1",
-    "@backstage/cli": "^0.29.5"
+    "@backstage/cli": "^0.29.5",
+    "@types/glob": "^8.1.0"
   },
   "files": [
     "dist"
