--- a/workspaces/adoption-insights/packages/app/package.json
+++ b/workspaces/adoption-insights/packages/app/package.json
@@ -45,6 +45,8 @@
     "@backstage/theme": "^0.6.4",
     "@material-ui/core": "^4.12.2",
     "@material-ui/icons": "^4.9.1",
+    "@mui/icons-material": "5.16.4",
+    "@red-hat-developer-hub/backstage-plugin-adoption-insights": "workspace:^",
     "@red-hat-developer-hub/backstage-plugin-analytics-module-adoption-insights": "workspace:^",
     "react": "^18.0.2",
     "react-dom": "^18.0.2",
