--- a/workspaces/adoption-insights/plugins/adoption-insights/package.json
+++ b/workspaces/adoption-insights/plugins/adoption-insights/package.json
@@ -34,22 +34,32 @@
     "postpack": "backstage-cli package postpack"
   },
   "dependencies": {
+    "@backstage/catalog-model": "^1.7.3",
     "@backstage/core-components": "^0.16.4",
     "@backstage/core-plugin-api": "^1.10.4",
+    "@backstage/plugin-catalog-react": "^1.15.2",
     "@backstage/theme": "^0.6.4",
     "@material-ui/core": "^4.12.2",
     "@material-ui/icons": "^4.9.1",
     "@material-ui/lab": "4.0.0-alpha.61",
-    "react-use": "^17.2.4"
+    "@mui/icons-material": "5.16.4",
+    "@mui/lab": "5.0.0-alpha.175",
+    "@mui/material": "5.16.14",
+    "@mui/x-date-pickers": "5.0.20",
+    "date-fns": "2.30.0",
+    "react-use": "^17.2.4",
+    "recharts": "^2.15.1"
   },
   "peerDependencies": {
     "react": "^16.13.1 || ^17.0.0 || ^18.0.0"
   },
   "devDependencies": {
     "@backstage/cli": "^0.30.0",
+    "@backstage/config": "^1.3.2",
     "@backstage/core-app-api": "^1.15.5",
     "@backstage/dev-utils": "^1.1.7",
     "@backstage/test-utils": "^1.7.5",
+    "@redhat-developer/red-hat-developer-hub-theme": "^0.5.0",
     "@testing-library/jest-dom": "^6.0.0",
     "@testing-library/react": "^14.0.0",
     "@testing-library/user-event": "^14.0.0",
