fix(marketplace): align with UXD: add grey placeholder if icon is missing and placeholder when there is no description (#498)
* chore(marketplace): add namespace to testdata

Signed-off-by: Christoph Jerolimov <jerolimov+git@redhat.com>

* fix(marketplace): make title and description optional

Signed-off-by: Christoph Jerolimov <jerolimov+git@redhat.com>

* fix(marketplace): render a grey placeholder icon when there is no icon defined

Signed-off-by: Christoph Jerolimov <jerolimov+git@redhat.com>

* fix(marketplace): render no description available when there is no description

Signed-off-by: Christoph Jerolimov <jerolimov+git@redhat.com>

---------

Signed-off-by: Christoph Jerolimov <jerolimov+git@redhat.com>

--- a/workspaces/marketplace/examples/all-packages.yaml
+++ b/workspaces/marketplace/examples/all-packages.yaml
@@ -1,6 +1,7 @@
 apiVersion: backstage.io/v1alpha1
 kind: Location
 metadata:
+  namespace: marketplace-plugin-demo
   name: all-packages
   description: A collection of all the marketplace packages
 spec:
