--- a/workspaces/marketplace/examples/collections/featured.yaml
+++ b/workspaces/marketplace/examples/collections/featured.yaml
@@ -2,7 +2,8 @@
 apiVersion: extensions.backstage.io/v1alpha1
 kind: PluginCollection
 metadata:
-  name: disabled-featured
+  namespace: marketplace-plugin-demo
+  name: featured
   title: Featured Plugins
   description: A set of great plugins! :)
 spec:
