--- a/workspaces/marketplace/examples/collections/kubernetes.yaml
+++ b/workspaces/marketplace/examples/collections/kubernetes.yaml
@@ -2,6 +2,7 @@
 apiVersion: extensions.backstage.io/v1alpha1
 kind: PluginCollection
 metadata:
+  namespace: marketplace-plugin-demo
   name: kubernetes
   title: Kubernetes Plugins
   description: A set of Kubernetes plugins! :)
