--- a/workspaces/marketplace/examples/plugins/acr.yaml
+++ b/workspaces/marketplace/examples/plugins/acr.yaml
@@ -2,6 +2,7 @@
 apiVersion: extensions.backstage.io/v1alpha1
 kind: Plugin
 metadata:
+  namespace: marketplace-plugin-demo
   name: acr
   title: Container Image Registry for ACR
   description: View container image details from Azure Container Registry in Backstage.
