--- a/workspaces/marketplace/examples/all-collections.yaml
+++ b/workspaces/marketplace/examples/all-collections.yaml
@@ -1,6 +1,7 @@
 apiVersion: backstage.io/v1alpha1
 kind: Location
 metadata:
+  namespace: marketplace-plugin-demo
   name: all-collections
   description: A collection of marketplace plugin collections
 spec:
