--- a/workspaces/marketplace/examples/all-orgs.yaml
+++ b/workspaces/marketplace/examples/all-orgs.yaml
@@ -1,6 +1,7 @@
 apiVersion: backstage.io/v1alpha1
 kind: Location
 metadata:
+  namespace: marketplace-plugin-demo
   name: all-orgs
   description: A collection of all the marketplace orgs
 spec:
