--- a/workspaces/marketplace/plugins/marketplace/package.json
+++ b/workspaces/marketplace/plugins/marketplace/package.json
@@ -39,11 +39,15 @@
     "@backstage/core-plugin-api": "^1.10.3",
     "@backstage/plugin-catalog-react": "^1.15.1",
     "@backstage/theme": "^0.6.3",
+    "@monaco-editor/react": "^4.7.0",
     "@mui/icons-material": "^5.16.7",
     "@mui/material": "^5.12.2",
     "@red-hat-developer-hub/backstage-plugin-marketplace-common": "workspace:^",
     "@scalprum/react-core": "0.9.3",
-    "@tanstack/react-query": "^5.60.5"
+    "@tanstack/react-query": "^5.60.5",
+    "monaco-editor": "^0.52.2",
+    "react-use": "^17.6.0",
+    "yaml": "^2.7.0"
   },
   "peerDependencies": {
     "react": "^17.0.0 || ^18.0.0",
