--- a/workspaces/marketplace/examples/plugins/acr.yaml
+++ b/workspaces/marketplace/examples/plugins/acr.yaml
@@ -117,3 +117,6 @@ spec:
           annotations:
             'azure-container-registry/repository-name': `<REPOSITORY-NAME>',
         ```
+
+  packages:
+    - backstage-community-plugin-acr
