feat(marketplace): add new marketplace-cli init command (#499)
Signed-off-by: Christoph Jerolimov <jerolimov+git@redhat.com>

--- a/workspaces/marketplace/packages/cli/package.json
+++ b/workspaces/marketplace/packages/cli/package.json
@@ -38,6 +38,7 @@
     "commander": "^12.0.0",
     "fs-extra": "^11.2.0",
     "glob": "^9.3.5",
+    "inquirer": "^12.4.3",
     "yaml": "^2.7.0"
   },
   "nodemonConfig": {
