feat(gloabl-header): add starred entities dropdown to header (#522)
Signed-off-by: Rohit Rai <rohitkrai03@gmail.com>

--- a/workspaces/global-header/plugins/global-header/app-config.dynamic.yaml
+++ b/workspaces/global-header/plugins/global-header/app-config.dynamic.yaml
@@ -30,6 +30,11 @@ dynamicPlugins:
               to: create
 
         - mountPoint: global.header/component
+          importName: StarredDropdown
+          config:
+            priority: 85
+
+        - mountPoint: global.header/component
           importName: SupportButton
           config:
             priority: 80
