Customizable (per-user) home-page grid layout (#452)
* adding a customizable (per-user) home-page

* adding a customizable (per-user) home-page

* adding changeset

* removing commented code out

* removing unecessary scalprum config

* updating api report for the new DynamicCustomizableHomePage component

* chore(homepage): extract duplicated header into a own component

Signed-off-by: Christoph Jerolimov <jerolimov+git@redhat.com>

* docs(homepage): add user customization doc

Signed-off-by: Christoph Jerolimov <jerolimov+git@redhat.com>

---------

Signed-off-by: Christoph Jerolimov <jerolimov+git@redhat.com>
Co-authored-by: Christoph Jerolimov <jerolimov+git@redhat.com>

--- a/workspaces/homepage/mkdocs.yaml
+++ b/workspaces/homepage/mkdocs.yaml
@@ -1,4 +1,4 @@
-site_name: Dynamic Home Page
+site_name: RHDH Home Page plugin
 
 plugins:
   - techdocs-core
@@ -9,17 +9,18 @@ nav:
       - Defaults: defaults.md
       - Header: header.md
       - Layout options: layout-options.md
+  - User Customization: user-customization.md
   - Included cards:
-      - Search: search.md
-      - Quick access: quick-access.md
-      - Headline: headline.md
-      - Markdown: markdown.md
-      - Placeholder: placeholder.md
-      - Catalog starred entities: catalog-starred.md
-      - Recently visited: recently-visited.md
-      - Top visited: top-visited.md
-      - Featured docs: featured-docs.md
-      - Jokes: jokes.md
-      - World clock: worldclock.md
+      - Search: cards/search.md
+      - Quick access: cards/quick-access.md
+      - Headline: cards/headline.md
+      - Markdown: cards/markdown.md
+      - Placeholder: cards/placeholder.md
+      - Catalog starred entities: cards/catalog-starred.md
+      - Recently visited: cards/recently-visited.md
+      - Top visited: cards/top-visited.md
+      - Featured docs: cards/featured-docs.md
+      - Jokes: cards/jokes.md
+      - World clock: cards/worldclock.md
   - Extend with plugins:
       - Create a new card: create-a-new-card.md
