feat(marketplace): added an Install page to marketplace plugin (#545)

--- a/workspaces/marketplace/examples/packages/red-hat-developer-hub-backstage-plugin-marketplace.yaml
+++ b/workspaces/marketplace/examples/packages/red-hat-developer-hub-backstage-plugin-marketplace.yaml
@@ -45,3 +45,14 @@ spec:
               mountPoints:
                 - mountPoint: admin.page.plugins/cards
                   importName: MarketplaceCatalogContent
+    - title: Another example
+      content:
+        dynamicPlugins:
+          frontend:
+            red-hat-developer-hub.backstage-plugin-marketplace: {}
+    - title: Example with some comments
+      content: |-
+        # a comment
+        dynamicPlugins:
+          frontend:
+            red-hat-developer-hub.backstage-plugin-marketplace: {}
