--- a/workspaces/adoption-insights/packages/backend/package.json
+++ b/workspaces/adoption-insights/packages/backend/package.json
@@ -22,6 +22,7 @@
   },
   "dependencies": {
     "@backstage/backend-defaults": "^0.8.0",
+    "@backstage/backend-plugin-api": "^1.2.0",
     "@backstage/config": "^1.3.2",
     "@backstage/plugin-app-backend": "^0.4.5",
     "@backstage/plugin-auth-backend": "^0.24.3",
@@ -45,7 +46,8 @@
     "@backstage/plugin-search-backend-module-techdocs": "^0.3.6",
     "@backstage/plugin-search-backend-node": "^1.3.8",
     "@backstage/plugin-techdocs-backend": "^1.11.6",
-    "@red-hat-developer-hub/backstage-plugin-adoption-insights-backend": "workspace:*",
+    "@red-hat-developer-hub/backstage-plugin-adoption-insights-backend": "workspace:^",
+    "@red-hat-developer-hub/backstage-plugin-adoption-insights-common": "workspace:^",
     "app": "link:../app",
     "better-sqlite3": "^9.0.0",
     "node-gyp": "^10.0.0",
