--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -7,6 +7,7 @@
 *                                                   @bethgriggs @nickboldt @kim-tsao @04kash @coreydaley
 
 /workspaces/adoption-insights                       @rohitkrai03 @karthikjeeyar 
+/workspaces/ai-integrations                         @johnmcollier @gabemontero @rohitkrai03
 /workspaces/bulk-import                             @christoph-jerolimov @debsmita1 @rm3l
 /workspaces/global-floating-action-button           @christoph-jerolimov @ciiay @debsmita1 @divyanshiGupta @gashcrumb @its-mitesh-kumar @logonoff
 /workspaces/global-header                           @christoph-jerolimov @ciiay @debsmita1 @divyanshiGupta @gashcrumb @its-mitesh-kumar @logonoff
