--- a/workspaces/adoption-insights/plugins/adoption-insights/package.json
+++ b/workspaces/adoption-insights/plugins/adoption-insights/package.json
@@ -39,6 +39,7 @@
     "@backstage/core-components": "^0.16.4",
     "@backstage/core-plugin-api": "^1.10.4",
     "@backstage/plugin-catalog-react": "^1.15.2",
+    "@backstage/plugin-permission-react": "^0.4.31",
     "@backstage/theme": "^0.6.4",
     "@material-ui/core": "^4.12.2",
     "@material-ui/icons": "^4.9.1",
@@ -47,6 +48,7 @@
     "@mui/lab": "5.0.0-alpha.175",
     "@mui/material": "5.16.14",
     "@mui/x-date-pickers": "5.0.20",
+    "@red-hat-developer-hub/backstage-plugin-adoption-insights-common": "workspace:^",
     "date-fns": "2.30.0",
     "react-use": "^17.2.4",
     "recharts": "^2.15.1"
