fix(adoption-insights): Add adoption insights plugin icon (#514)
* fix(adoption-insights): add adoption insights icon

* update api reports

--- a/workspaces/adoption-insights/plugins/adoption-insights-backend/package.json
+++ b/workspaces/adoption-insights/plugins/adoption-insights-backend/package.json
@@ -58,7 +58,8 @@
   },
   "files": [
     "dist",
-    "config.d.ts"
+    "config.d.ts",
+    "migrations"
   ],
   "configSchema": "config.d.ts"
 }
