--- a/workspaces/bulk-import/plugins/bulk-import-backend/package.json
+++ b/workspaces/bulk-import/plugins/bulk-import-backend/package.json
@@ -57,6 +57,7 @@
     "express": "^4.17.1",
     "git-url-parse": "^14.0.0",
     "js-yaml": "^4.1.0",
+    "just-kebab-case": "4.2.0",
     "luxon": "^3.4.4",
     "node-fetch": "^2.6.7",
     "openapi-backend": "^5.10.6"
@@ -68,7 +69,7 @@
     "@backstage/cli": "^0.30.0",
     "@backstage/config": "^1.3.2",
     "@backstage/plugin-catalog-backend": "^1.31.0",
-    "@janus-idp/backstage-plugin-audit-log-node": "^1.7.1",
+    "@backstage/types": "^1.2.1",
     "@openapitools/openapi-generator-cli": "2.16.3",
     "@spotify/prettier-config": "^15.0.0",
     "@types/express": "4.17.21",
