feat(ai-integrations): bootstrap AI experience plugin (#575)
* feat(ai-integrations): bootstrap ai experience plugin

* add api reports

--- a/workspaces/ai-integrations/packages/app/package.json
+++ b/workspaces/ai-integrations/packages/app/package.json
@@ -46,6 +46,7 @@
     "@backstage/theme": "^0.6.4",
     "@material-ui/core": "^4.12.2",
     "@material-ui/icons": "^4.9.1",
+    "@red-hat-developer-hub/backstage-plugin-ai-experience": "workspace:^",
     "react": "^18.0.2",
     "react-dom": "^18.0.2",
     "react-router": "^6.3.0",
