--- a/workspaces/ai-integrations/plugins/catalog-backend-module-model-catalog/package.json
+++ b/workspaces/ai-integrations/plugins/catalog-backend-module-model-catalog/package.json
@@ -19,7 +19,10 @@
   "backstage": {
     "role": "backend-plugin-module",
     "pluginId": "catalog",
-    "pluginPackage": "@backstage/plugin-catalog-backend"
+    "pluginPackage": "@backstage/plugin-catalog-backend",
+    "pluginPackages": [
+      "@red-hat-developer-hub/backstage-plugin-catalog-backend-module-model-catalog"
+    ]
   },
   "scripts": {
     "start": "backstage-cli package start",
@@ -31,7 +34,16 @@
     "postpack": "backstage-cli package postpack"
   },
   "dependencies": {
-    "@backstage/backend-plugin-api": "^1.2.1"
+    "@backstage/backend-plugin-api": "^1.1.1",
+    "@backstage/catalog-client": "^1.9.1",
+    "@backstage/catalog-model": "^1.7.2",
+    "@backstage/errors": "^1.2.7",
+    "@backstage/plugin-catalog-backend": "^1.30.0",
+    "@backstage/plugin-catalog-common": "^1.1.3",
+    "@backstage/plugin-catalog-node": "^1.15.1",
+    "@redhat-ai-dev/model-catalog-types": "^1.0.1",
+    "stream": "^0.0.3",
+    "yaml": "^2.7.0"
   },
   "devDependencies": {
     "@backstage/backend-test-utils": "^1.3.1",
