--- a/workspaces/ai-integrations/plugins/ai-experience/package.json
+++ b/workspaces/ai-integrations/plugins/ai-experience/package.json
@@ -39,6 +39,8 @@
     "@material-ui/core": "^4.9.13",
     "@material-ui/icons": "^4.9.1",
     "@material-ui/lab": "^4.0.0-alpha.61",
+    "@mui/icons-material": "5.16.4",
+    "@mui/material": "5.16.14",
     "react-use": "^17.2.4"
   },
   "peerDependencies": {
