--- a/workspaces/ai-integrations/packages/app/package.json
+++ b/workspaces/ai-integrations/packages/app/package.json
@@ -47,6 +47,8 @@
     "@material-ui/core": "^4.12.2",
     "@material-ui/icons": "^4.9.1",
     "@red-hat-developer-hub/backstage-plugin-ai-experience": "workspace:^",
+    "@red-hat-developer-hub/backstage-plugin-global-header": "^1.4.0",
+    "@redhat-developer/red-hat-developer-hub-theme": "^0.5.0",
     "react": "^18.0.2",
     "react-dom": "^18.0.2",
     "react-router": "^6.3.0",
