--- a/workspaces/ai-integrations/packages/backend/package.json
+++ b/workspaces/ai-integrations/packages/backend/package.json
@@ -45,6 +45,7 @@
     "@backstage/plugin-search-backend-module-techdocs": "^0.4.0",
     "@backstage/plugin-search-backend-node": "^1.3.9",
     "@backstage/plugin-techdocs-backend": "^2.0.0",
+    "@red-hat-developer-hub/backstage-plugin-ai-experience-backend": "workspace:^",
     "@red-hat-developer-hub/backstage-plugin-catalog-backend-module-model-catalog": "workspace:^",
     "app": "link:../app",
     "better-sqlite3": "^9.0.0",
