--- a/workspaces/ai-integrations/plugins/ai-experience-backend/package.json
+++ b/workspaces/ai-integrations/plugins/ai-experience-backend/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@red-hat-developer-hub/backstage-plugin-ai-experience",
+  "name": "@red-hat-developer-hub/backstage-plugin-ai-experience-backend",
   "version": "0.1.0",
   "license": "Apache-2.0",
   "private": true,
@@ -7,16 +7,16 @@
   "types": "src/index.ts",
   "publishConfig": {
     "access": "public",
-    "main": "dist/index.esm.js",
+    "main": "dist/index.cjs.js",
     "types": "dist/index.d.ts"
   },
   "repository": {
     "type": "git",
     "url": "https://github.com/redhat-developer/rhdh-plugins",
-    "directory": "workspaces/ai-integrations/plugins/ai-experience"
+    "directory": "workspaces/ai-integrations/plugins/ai-experience-backend"
   },
   "backstage": {
-    "role": "frontend-plugin",
+    "role": "backend-plugin",
     "pluginId": "ai-experience",
     "pluginPackages": [
       "@red-hat-developer-hub/backstage-plugin-ai-experience",
@@ -24,7 +24,6 @@
       "@red-hat-developer-hub/backstage-plugin-ai-experience-common"
     ]
   },
-  "sideEffects": false,
   "scripts": {
     "start": "backstage-cli package start",
     "build": "backstage-cli package build",
@@ -35,36 +34,24 @@
     "postpack": "backstage-cli package postpack"
   },
   "dependencies": {
+    "@backstage/backend-defaults": "^0.8.2",
+    "@backstage/backend-plugin-api": "^1.2.1",
     "@backstage/catalog-client": "^1.9.1",
-    "@backstage/core-components": "^0.17.0",
-    "@backstage/core-plugin-api": "^1.10.5",
-    "@backstage/theme": "^0.6.4",
-    "@material-ui/core": "^4.9.13",
-    "@material-ui/icons": "^4.9.1",
-    "@material-ui/lab": "^4.0.0-alpha.61",
-    "@mui/icons-material": "5.16.4",
-    "@mui/material": "5.16.14",
-    "@red-hat-developer-hub/backstage-plugin-ai-experience-backend": "workspace:^",
+    "@backstage/errors": "^1.2.7",
+    "@backstage/plugin-catalog-node": "^1.16.1",
     "@red-hat-developer-hub/backstage-plugin-ai-experience-common": "workspace:^",
-    "@tanstack/react-query": "^5.71.0",
-    "react-use": "^17.2.4"
-  },
-  "peerDependencies": {
-    "react": "^16.13.1 || ^17.0.0 || ^18.0.0"
+    "express": "^4.17.1",
+    "express-promise-router": "^4.1.0",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
+    "@backstage/backend-test-utils": "^1.3.1",
     "@backstage/cli": "^0.31.0",
-    "@backstage/core-app-api": "^1.16.0",
-    "@backstage/dev-utils": "^1.1.8",
-    "@backstage/test-utils": "^1.7.6",
-    "@testing-library/jest-dom": "^6.0.0",
-    "@testing-library/react": "^14.0.0",
-    "@testing-library/user-event": "^14.0.0",
-    "msw": "^1.0.0",
-    "react": "^16.13.1 || ^17.0.0 || ^18.0.0"
+    "@types/express": "^4.17.6",
+    "@types/supertest": "^2.0.12",
+    "supertest": "^6.2.4"
   },
   "files": [
-    "dist",
-    "app-config.dynamic.yaml"
+    "dist"
   ]
 }
