--- a/workspaces/lightspeed/plugins/lightspeed-backend/package.json
+++ b/workspaces/lightspeed/plugins/lightspeed-backend/package.json
@@ -52,7 +52,8 @@
     "@langchain/openai": "^0.3.0",
     "@red-hat-developer-hub/backstage-plugin-lightspeed-common": "workspace:^",
     "express": "^4.21.1",
-    "http-proxy-middleware": "^3.0.2"
+    "http-proxy-middleware": "^3.0.2",
+    "node-fetch": "2.6.9"
   },
   "devDependencies": {
     "@backstage/backend-test-utils": "^1.3.0",
