--- a/workspaces/theme/plugins/theme/package.json
+++ b/workspaces/theme/plugins/theme/package.json
@@ -32,6 +32,7 @@
     "@backstage/core-plugin-api": "^1.10.4",
     "@backstage/theme": "^0.6.4",
     "@material-ui/icons": "^4.11.3",
+    "@mui/icons-material": "^5.17.1",
     "@mui/material": "^5.0.0",
     "react": "^16.13.1 || ^17.0.0 || ^18.0.0"
   },
@@ -71,5 +72,8 @@
     "@ciiay",
     "@debsmita1",
     "@divyanshiGupta"
-  ]
+  ],
+  "dependencies": {
+    "@mui/icons-material": "^5.17.1"
+  }
 }
