--- a/workspaces/ai-integrations/plugins/catalog-backend-module-model-catalog/package.json
+++ b/workspaces/ai-integrations/plugins/catalog-backend-module-model-catalog/package.json
@@ -42,6 +42,7 @@
     "@backstage/plugin-catalog-common": "^1.1.3",
     "@backstage/plugin-catalog-node": "^1.15.1",
     "@redhat-ai-dev/model-catalog-types": "^1.0.1",
+    "js-yaml": "^4.1.0",
     "stream": "^0.0.3",
     "yaml": "^2.7.0"
   },
