--- a/workspaces/global-floating-action-button/plugins/global-floating-action-button/package.json
+++ b/workspaces/global-floating-action-button/plugins/global-floating-action-button/package.json
@@ -45,6 +45,7 @@
   },
   "peerDependencies": {
     "react": "16.13.1 || ^17.0.0 || ^18.0.0",
+    "react-dom": "16.13.1 || ^17.0.0 || ^18.0.0",
     "react-router-dom": "^6.0.0"
   },
   "devDependencies": {
