--- a/workspaces/bulk-import/plugins/bulk-import/package.json
+++ b/workspaces/bulk-import/plugins/bulk-import/package.json
@@ -43,9 +43,9 @@
     "@backstage/plugin-permission-react": "^0.4.31",
     "@backstage/theme": "^0.6.4",
     "@janus-idp/shared-react": "^2.13.1",
-    "@mui/icons-material": "5.16.14",
+    "@mui/icons-material": "^5.15.17",
     "@mui/material": "^5.12.2",
-    "@mui/styles": "^6.1.6",
+    "@mui/styles": "5.16.14",
     "@red-hat-developer-hub/backstage-plugin-bulk-import-common": "workspace:^",
     "@tanstack/react-query": "^4.29.21",
     "formik": "^2.4.5",
@@ -65,7 +65,7 @@
     "@backstage/dev-utils": "^1.1.7",
     "@backstage/test-utils": "^1.7.5",
     "@playwright/test": "1.50.1",
-    "@redhat-developer/red-hat-developer-hub-theme": "0.4.0",
+    "@redhat-developer/red-hat-developer-hub-theme": "^0.5.0",
     "@spotify/prettier-config": "^15.0.0",
     "@testing-library/dom": "^10.0.0",
     "@testing-library/jest-dom": "^6.0.0",
@@ -75,16 +75,7 @@
     "@types/react": "^18.2.58",
     "msw": "1.3.5",
     "prettier": "3.4.2",
-    "react": "16.13.1 || ^17.0.0 || ^18.0.0",
-    "react-dom": "16.13.1 || ^17.0.0 || ^18.0.0",
-    "react-router-dom": "^6.0.0",
-    "start-server-and-test": "2.0.10"
-  },
-  "scalprum": {
-    "name": "janus-idp.backstage-plugin-bulk-import",
-    "exposedModules": {
-      "BulkImportPlugin": "./src/index.ts"
-    }
+    "react": "16.13.1 || ^17.0.0 || ^18.0.0"
   },
   "files": [
     "dist",
@@ -105,7 +96,8 @@
   "homepage": "https://red.ht/rhdh",
   "bugs": "https://github.com/redhat-developer/rhdh-plugins/issues",
   "maintainers": [
-    "@rm3l"
+    "@rm3l",
+    "@debsmita1"
   ],
   "author": "Red Hat"
 }
