--- a/workspaces/orchestrator/plugins/orchestrator/package.json
+++ b/workspaces/orchestrator/plugins/orchestrator/package.json
@@ -61,6 +61,7 @@
     "@backstage/plugin-catalog": "^1.28.0",
     "@backstage/plugin-permission-common": "^0.8.4",
     "@backstage/plugin-permission-react": "^0.4.32",
+    "@backstage/types": "^1.2.1",
     "@kie-tools-core/editor": "^0.32.0",
     "@kie-tools/serverless-workflow-standalone-editor": "^10.0.0",
     "@monaco-editor/react": "^4.6.0",
@@ -68,6 +69,8 @@
     "@red-hat-developer-hub/backstage-plugin-orchestrator-form-api": "workspace:^",
     "@red-hat-developer-hub/backstage-plugin-orchestrator-form-react": "workspace:^",
     "axios": "^1.7.7",
+    "json-schema": "^0.4.0",
+    "lodash": "^4.17.21",
     "moment": "^2.29.4",
     "monaco-editor": "^0.52.2",
     "react-json-view": "^1.21.3",
@@ -81,7 +84,6 @@
     "@backstage/cli": "^0.31.1",
     "@backstage/dev-utils": "^1.1.8",
     "@backstage/test-utils": "^1.7.6",
-    "@backstage/types": "^1.2.1",
     "@janus-idp/cli": "3.2.0",
     "@material-ui/core": "^4.12.4",
     "@material-ui/icons": "^4.11.3",
