patch(orchestrator): Update supported version, @kie-tools and @janus/cli (#678)
* fix(orchestrator): upgrade @kie-tools to 10.0.0

Signed-off-by: Marek Libra <marek.libra@gmail.com>

* upgrade @janus/cli to 3.5.0

Signed-off-by: Marek Libra <marek.libra@gmail.com>

* Increase supported version to 1.37.1

* changeset

* yarn.lock

---------

Signed-off-by: Marek Libra <marek.libra@gmail.com>

--- a/workspaces/orchestrator/plugins/orchestrator-form-widgets/package.json
+++ b/workspaces/orchestrator/plugins/orchestrator-form-widgets/package.json
@@ -72,6 +72,7 @@
     "@backstage/core-app-api": "^1.15.2",
     "@backstage/dev-utils": "^1.1.7-next.3",
     "@backstage/test-utils": "^1.7.1",
+    "@janus-idp/cli": "3.5.0",
     "@testing-library/jest-dom": "^6.0.0",
     "@testing-library/react": "^14.0.0",
     "@testing-library/user-event": "^14.0.0",
