RHDHPAI-769: Sandbox Plugin Bug fixes (#688)
* removed proxy and changed the img csp url

Signed-off-by: Lucifergene <47265560+Lucifergene@users.noreply.github.com>

* fixed ver issue

Signed-off-by: Lucifergene <47265560+Lucifergene@users.noreply.github.com>

* fixed otp text box issue

* set apis from config

* pm-review-fixes

* title-fix

* updated-dynmaic-app-config

* added new flag for full page SSO page

---------

Signed-off-by: Lucifergene <47265560+Lucifergene@users.noreply.github.com>

--- a/workspaces/sandbox/app-config.yaml
+++ b/workspaces/sandbox/app-config.yaml
@@ -2,23 +2,17 @@ app:
   title: Developer Sandbox
   baseUrl: http://localhost:3000
 
+# Used for enabling the full page redirect flow rather than the popup flow for Red Hat SSO
+enableExperimentalRedirectFlow: true
+
 organization:
   name: Red Hat
 
 sandbox:
+  signupAPI: ${SIGNUP_API}
+  kubeAPI: ${KUBE_API}
   recaptcha:
     siteKey: ${RECAPTCHA_SITE_KEY}
-
-proxy:
-  endpoints:
-    '/signup':
-      target: ${SIGNUP_ENDPOINT}
-      changeOrigin: true
-      followRedirects: true
-    '/kube-api':
-      target: ${KUBE_API_ENDPOINT}
-      changeOrigin: true
-      followRedirects: true
 
 backend:
   # Used for enabling authentication, secret is shared by all backend plugins
