Add Sandbox team to Sanbox workjspace CODEOWNERS (#706)

--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -17,4 +17,4 @@
 /workspaces/openshift-image-registry                @christoph-jerolimov @ciiay @debsmita1 @divyanshiGupta @gashcrumb @its-mitesh-kumar @logonoff @karthikjeeyar
 /workspaces/orchestrator                            @batzionb @mareklibra @gciavarrini
 /workspaces/theme                                   @christoph-jerolimov @ciiay @debsmita1 @divyanshiGupta @gashcrumb @its-mitesh-kumar @logonoff
-/workspaces/sandbox                                 @lucifergene @rohitkrai03
+/workspaces/sandbox                                 @lucifergene @rohitkrai03 @karthikjeeyar @xcoulon @alexeykazakov @mfrancisc @rsoaresd @jrosental
