--- a/workspaces/global-header/plugins/global-header/package.json
+++ b/workspaces/global-header/plugins/global-header/package.json
@@ -47,6 +47,7 @@
     "@backstage/plugin-search-common": "^1.2.17",
     "@backstage/plugin-search-react": "^1.8.6",
     "@backstage/plugin-signals-react": "^0.0.10",
+    "@backstage/plugin-user-settings": "^0.8.19",
     "@backstage/theme": "^0.6.4",
     "@mui/icons-material": "5.16.14",
     "@mui/material": "5.16.14",
