--- a/workspaces/orchestrator/packages/backend/package.json
+++ b/workspaces/orchestrator/packages/backend/package.json
@@ -27,6 +27,7 @@
     "@backstage/plugin-app-backend": "^0.5.0",
     "@backstage/plugin-auth-backend": "^0.24.4",
     "@backstage/plugin-auth-backend-module-github-provider": "^0.3.1",
+    "@backstage/plugin-auth-backend-module-gitlab-provider": "^0.3.2",
     "@backstage/plugin-auth-backend-module-guest-provider": "^0.2.6",
     "@backstage/plugin-auth-node": "^0.6.1",
     "@backstage/plugin-catalog-backend": "^1.32.0",
