feat(orchestrator): ActiveTextInput widget (#719)
* feat(orchestrator): add ActiveTextInput widget

Signed-off-by: Marek Libra <marek.libra@gmail.com>

* add jsonata dependency

* fix autocomplete handler

* Add validation

* changeset

* fix typos

* Introduce useRequestInit and useEvaluateTemplate

---------

Signed-off-by: Marek Libra <marek.libra@gmail.com>

--- a/workspaces/orchestrator/plugins/orchestrator-form-widgets/package.json
+++ b/workspaces/orchestrator/plugins/orchestrator-form-widgets/package.json
@@ -61,6 +61,7 @@
     "@red-hat-developer-hub/backstage-plugin-orchestrator-form-api": "workspace:^",
     "@rjsf/utils": "^5.21.2",
     "json-schema": "^0.4.0",
+    "jsonata": "^2.0.6",
     "lodash": "^4.17.21",
     "react-use": "^17.2.4"
   },
