chore(orchestrator): rename exposed OrchestratorFormWidgetsPlugin to PluginRoot (#784)
Signed-off-by: Marek Libra <marek.libra@gmail.com>

--- a/workspaces/orchestrator/plugins/orchestrator-form-widgets/package.json
+++ b/workspaces/orchestrator/plugins/orchestrator-form-widgets/package.json
@@ -71,7 +71,7 @@
   "scalprum": {
     "name": "red-hat-developer-hub.backstage-plugin-orchestrator-form-widgets",
     "exposedModules": {
-      "OrchestratorFormWidgetsPlugin": "./src/index.ts"
+      "PluginRoot": "./src/index.ts"
     }
   },
   "devDependencies": {
