feat(extensions): update marketplace pluginId to extensions (#762)
* feat(extensions): update extension to extensions

* update marketplace pluginId to extensions

--- a/workspaces/marketplace/plugins/marketplace-backend/package.json
+++ b/workspaces/marketplace/plugins/marketplace-backend/package.json
@@ -16,7 +16,7 @@
   },
   "backstage": {
     "role": "backend-plugin",
-    "pluginId": "marketplace",
+    "pluginId": "extensions",
     "pluginPackages": [
       "@red-hat-developer-hub/backstage-plugin-marketplace",
       "@red-hat-developer-hub/backstage-plugin-marketplace-backend",
@@ -37,6 +37,7 @@
     "@backstage/backend-plugin-api": "^1.2.0",
     "@backstage/catalog-client": "^1.9.1",
     "@backstage/catalog-model": "^1.7.3",
+    "@backstage/errors": "^1.2.7",
     "@backstage/plugin-catalog-node": "^1.16.0",
     "@backstage/plugin-permission-common": "^0.8.4",
     "@backstage/plugin-permission-node": "^0.8.8",
