--- a/workspaces/marketplace/plugins/marketplace-common/package.json
+++ b/workspaces/marketplace/plugins/marketplace-common/package.json
@@ -18,7 +18,7 @@
   },
   "backstage": {
     "role": "common-library",
-    "pluginId": "marketplace",
+    "pluginId": "extensions",
     "pluginPackages": [
       "@red-hat-developer-hub/backstage-plugin-marketplace",
       "@red-hat-developer-hub/backstage-plugin-marketplace-backend",
